--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -86,10 +86,10 @@ Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts
 
 \subsubsection*{Salzsäure}
 
-Die leitende Indium-Zinn-Schicht lässt sich sehr schnell und einfach mit Salsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht, (Fotolack, Klebefolie oder Edding) in Salzsäure gelegt. Bereits nach 30 sek ist der Vorgang beendet. Gegenenfalls können die Platten auch länger im Salsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
+Die leitende Indium-Zinn-Schicht lässt sich sehr schnell und einfach mit Salzsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht (Fotolack, Klebefolie oder Edding), in Salzsäure gelegt. Bereits nach 15 Sek. ist der Vorgang beendet. Gegebenenfalls können die Platten auch länger im Salzsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
 
 \subsubsection*{Platinenätzmittel}
-Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen verwendet wird. Dazu wird eine Natriumpersulfatlösung verwendet und nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternatie zur Salzsäure dar.
+Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen genutzt wird. Nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternative zur Salzsäure dar.
 
 \begin{figure}[t]
   \centering
@@ -113,66 +113,65 @@ Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulf
  \caption{Testmuster obere und untere Seite}
  \end{figure}
 
-Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure liegt darin, dass sie die Ätzung schneller durchführt. Deshalb wir diese Methode gewählt.
+Qualitativ waren keine Unterschiede zu erkennen aber der Vorteil der Salzsäure liegt darin, dass sie die Ätzung schneller durchführt. Deshalb wird diese Methode gewählt.
 
 \subsection{Oxidierung der Glasplatten}
 
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
-Um die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid zu erreichen wurden mehrere Verfahren getestet. Im Folgenden werden diese forgestellt und auf ihre Einsetzbarkeit überprüft.
-Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende Schicht typische brauen Färbung merklich verschwindet und eine Messung mittels eines Multimeters eine Nennenswerte Änderung der Leitfähigkeit ergibt.
+Um die Oxidierung der Indium-Zinn Schicht der Glasplatten zu Indium-Zinn-Oxid zu erreichen, wurden mehrere Verfahren getestet. Im Folgenden werden diese vorgestellt und auf ihre Einsetzbarkeit überprüft.
+Die Indikatoren für eine gelungene Oxidierung sind, dass die für die leitende Schicht typische brauen Färbung merklich verschwindet und eine Messung mittels eines Multimeters eine nennenswerte Änderung der Leitfähigkeit ergibt.
 
 %Die Indikatoren für eine gelungene Oxidierung sind:
-%
-%\begin{itemize}
-%\item Die für die leitende Schicht typische brauen Färbung muss merklich verschwinden
-%\item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben\\
-%\end{itemize}
+
+\begin{itemize}
+\item Die für die leitende Schicht typische brauen Färbung muss merklich verschwinden
+\item Eine Messung mittels eines Multimeters muss eine Nennenswerte Änderung der Leitfähigkeit ergeben\\
+\end{itemize}
 
 \subsubsection{Wasserstoffperoxid}
 
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
-Eine Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Beide oben genannten Indikatoren haben nicht angesprochen, was darauf schließen lässt, dass der Oxidierungsversuch nicht erfolgreich war.
-Nun soll ein Langzeittest über mehrere Tage Erkentnisse geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
+Eine Testplatte wurden in ein Wasserstoffperoxid-Bad gegeben und nach 1h wieder entnommen. Leider war dieser Oxidierungsversuch nicht erfolgreich.
+Nun soll ein Langzeittest über mehrere Tage Erkenntnisse darüber geben, ob der Oxidierungsvorgang bei einer längeren Einwirkungsdauer funktioniert. Dies war nicht der Fall.
 
 Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid bei Raumtemperatur nicht möglich ist.
 
 \subsubsection{Wasserstoffperoxid mit Hitze}
 
-Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch gestartet, die Indium-Zinn Schicht in erwärmten Wasserstoffperoxid durchzuführen.
-Keiner der oben genannten Indikatoren wies auf eine Oxidierung hin, weshalb das Verfahren ebenfalls als nicht erfolgreich gewertet wird.
+Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch gestartet, die Indium-Zinn Schicht in erwärmten Wasserstoffperoxid durchzuführen. Auch hier konnte keine Oxidierung festgestellt werden.
 
 \subsubsection{Hitze durch einen Heißluftfön}
 
-Ein Test mit einem Heißluftfön, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist keine großflächige Aufbringung der Hitze möglich. Deshalb ist für Plattengröße von 110mmx100mm das Verfahren unbrauchbar.
+Ein Test mit einem Heißluftfön, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist keine großflächige Aufbringung der Hitze möglich. Deshalb ist für Plattengröße von 110mm x 100mm das Verfahren unbrauchbar.
 
 \subsubsection{Hitze im Ofen}
 
-Ein funktionierendes, aber sehr zeitaufwändiges, Verfahren ist die Oxidierung in einem Ofen. Hierbei kann ein gewöhnlicher Elektroofen eingesetzt werden. Wir haben den Reflow-Ofen aus dem Fablab hierfür benutzt.
-Bei der maximalen Temperatur des Ofen von 230 Grad werden die Glasplatten mit der beschichteten Seite nach oben auf das Gitter gelegt. Wichtig ist, dass der Ofen maximal leicht vorgeheizt wurde, da zu starke Temperaturunterschiede die Glasplatten zum brechen bringen könnten. Nun wurden die Testplatten für 1:30h im Ofen belassen und anschließend für 30 min abgekühlt.
+Ein funktionierendes, aber sehr zeitaufwändiges Verfahren ist die Oxidierung in einem Ofen. Hierbei kann ein gewöhnlicher Elektroofen eingesetzt werden. Wir haben den Reflow-Ofen aus dem Fablab hierfür benutzt.
+Bei der maximalen Temperatur des Ofen von 230 Grad werden die Glasplatten mit der beschichteten Seite nach oben auf das Gitter gelegt. Wichtig ist, dass der Ofen nur leicht vorgeheizt wurde, da zu starke Temperaturunterschiede die Glasplatten zum brechen bringen könnten. Nun wurden die Testplatten für 1:30h im Ofen belassen und dort anschließend für 30 min abgekühlt.
 Beide Indikatoren haben angeschlagen was zeigt, dass die Oxidierung erfolgreich war.\\
 
 Da die Oxidierung im Ofen das einzig funktionierende und effiziente Verfahren ist, wird es zur Herstellung der Displays eingesetzt.
 
 \subsection{Ausrichtung der Glasplatten}
 
-Die Glasplatten müssen exakt über einanderliegen, sodass sich die Anzeigesymbole perfekt gegenüberliegen. Denn nur wo sie sich exakt gegenüber liegen, wird eine scharfe Anzeige möglich sein.
-Aus diesem Grund haben wir zuerst Punkte mit dem Folienplotter ausgeschnitten und vor dem Oxidationsvorgang auf den Glasplatten positioniert, denn zu diesem Zeitpunkt ist die braune leitende Schicht noch gut sichtbar. Allerdings schmelzen dies Punkte, wenn man die Glasplatten zur Oxidierung in den Ofen gibt, weshalb diese Methode nicht empfehlenswert ist.
+Die Glasplatten müssen exakt übereinander liegen, sodass sich die Anzeigesymbole perfekt gegenüberstehen. Denn nur wo sie sich exakt gegenüber liegen, wird eine scharfe Anzeige möglich sein.
+Aus diesem Grund haben wir zuerst kleiner Punkte mit dem Folienplotter ausgeschnitten und vor dem Oxidationsvorgang auf den Glasplatten positioniert (vergleiche Abbildung \ref{testmuster}), denn zu diesem Zeitpunkt ist die braune leitende Schicht noch gut sichtbar. Allerdings schmelzen dies Punkte, wenn man die Glasplatten zur Oxidierung in den Ofen gibt, weshalb diese Methode nicht empfehlenswert ist.
 Es hat sich herausgestellt, dass die Oxidierung im Ofen die leitende Struktur nicht komplett durchsichtig macht. Deshalb ist eine extra Aufbringung von Ausrichtungspunkten oder Ähnlichem nicht notwendig.\\
-Die Platten können ohne Probleme anhand der schwachen braunen Restfäbrung ausgerichtet werden.
+Die Platten können ohne Probleme anhand der schwachen braunen Restfärbung ausgerichtet werden.
 
 \subsection{Reinigung der Glasplatten}
 
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Im nächsten Schritt müssen die Glasplatten gereinigt werden, da jede Verunreinigung dazu führen kann, dass ungewollte Flecken entstehen.
-Das alkalische Reinigungsbad wird im Verhältnis 1:5 mit Wasser gemischt und anschließend in ein Gefäß gegeben, in das die Glasplatten hineingelegt werden können (siehe Bild f). Wenn man die Platten jeweils mit der leitende Seite nach Außen zeigend einlegt, können beide gleichzeitig gereinigt werden. Um einen Siedeverzug zu verhindern ist es notwendig, dass Siedesteinchen eingelegt werden. Nachdem die Glasplatten in das Gefäß gelegt wurden kann die Flüßigkeit mit einem Heizfeld zum kochen gebracht. Die Glasplatten für 5 min im kochenden Wasser belassen und dann erst wieder etwas abkühlen lassen. Die Glasplatten vorsichtig entnehmen, da große Temperaturunterschiede diese zum Springen bringen können.
+Das alkalische Reinigungsbad wird im Verhältnis 1:5 mit Wasser gemischt und anschließend in ein Gefäß gegeben, in das die Glasplatten hineingelegt werden können (siehe Abbildung \ref{Reinigen_der_Platten}). Wenn man die Platten jeweils mit der leitende Seite nach Außen zeigend einlegt, können beide gleichzeitig gereinigt werden. Um einen Siedeverzug zu verhindern ist es notwendig, dass Siedesteinchen eingelegt werden. Nachdem die Glasplatten in das Gefäß gelegt wurden kann die Flüßigkeit mit einem Heizfeld zum kochen gebracht werden. Die Glasplatten für 5 min im kochenden Wasser belassen und dann wieder etwas abkühlen lassen. Die Glasplatten vorsichtig entnehmen, da große Temperaturunterschiede diese zum zerspringen bringen können.
 Von nun an sollte darauf geachtet werden, dass die sauberen Platten nicht wieder durch Fussel oder Feuchtigkeit verunreinigt werden.
 
 \subsection{Reiborientierung}
 
-Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen werden. Hierzu die mit einem fusselfreien Tuch abgetrockneten Glasplatten mit der leitenden Seite nach oben auf eine rutschfeste und harte Unterlage legen. Jetzt mit einem fusselfreien Tuch mehrfach unter festem Druck in eine Richtung streichen (siehe Bild g). Glasplatte 1 muss genau um 90 Grad versetzt zur Glasplatte 2 orientiert werden.
+Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen werden. Hierzu die mit einem fusselfreien Tuch abgetrockneten Glasplatten mit der leitenden Seite nach oben auf eine rutschfeste und harte Unterlage legen. Jetzt mit einem fusselfreien Tuch mehrfach unter festem Druck in eine Richtung streichen (siehe Abbildung \ref{Orientierung_der_Molekuele_durch_Reiben}). Glasplatte 1 muss genau um 90 Grad versetzt zur Glasplatte 2 orientiert werden.
 
 \subsection{Verkleben und Befüllen}
 
@@ -215,10 +214,12 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
      ~
     \subfigure[Reinigen der Platten]{	
    		\includegraphics[width=0.22\textwidth]{./Bilder/cleanenDerPlatten.jpg}
+   		 \label{Reinigen_der_Platten}
     }
     ~
       \subfigure[Orientierung der Moleküle durch Reiben]{
    		\includegraphics[width=0.22\textwidth]{./Bilder/Reiborientierung.jpg}
+   		\label{Orientierung_der_Molekuele_durch_Reiben}
     }
     ~
       \subfigure[Verkleben von zwei Seiten des Displays]{
