--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -176,12 +176,12 @@ Jetzt müssen die leitenden Schichten noch einer Reiborientierung unterzogen wer
 \subsection{Verkleben und Befüllen}
 
 Nun die zugeschnittene Abstandhalterfolie auf eine Glasplatte legen. Als Abstandhalterfolie kann die Folie einer gewöhnlichen Verpackung einer Zigarettenschatel verwendet werden. 
-Anschließend die zweite Glasplatte auflegen und zur Ersten ausrichten, dass die Anzeigesymbole so exakt wie möglich übereinander liegen. Nun die zwei Glasplatten an den Abstandhalterfolien zusamendrücken und zwei gegenüberliegende Seiten mit 2-Komponentenkleber verkleben (siehe Bild h). Sobald dieser hart geworden ist kann mit der Befüllung des Flüssigkristalls begonnen werden.
-Nur sehr wenig Flüssigkristall mit einer Pipette entnehmen und an eine offene Seite auftragen. Durch den Kapillareffekt zieht dieser von selbst ein (siehe Bild i). Wenn das Display komplett vom Flüssigkristall durchzogen ist können die beiden noch offenen Seiten ebenfalls mit 2-Komponentenkleber verklebt werden.\\
+Anschließend die zweite Glasplatte auflegen und zur Ersten ausrichten, dass die Anzeigesymbole so exakt wie möglich übereinander liegen. Nun die zwei Glasplatten an den Abstandhalterfolien zusamendrücken und zwei gegenüberliegende Seiten mit 2-Komponentenkleber verkleben (siehe Abbildung \ref{Verkleben_von_zwei_Seiten_des_Displays}). Sobald dieser hart geworden ist kann mit der Befüllung des Flüssigkristalls begonnen werden.
+Nur sehr wenig Flüssigkristall mit einer Pipette entnehmen und an eine offene Seite auftragen. Durch den Kapillareffekt zieht dieser von selbst ein (siehe Abbildung \ref{Einfuehren_des_Fluessigkristalls}). Wenn das Display komplett vom Flüssigkristall durchzogen ist können die beiden noch offenen Seiten ebenfalls mit 2-Komponentenkleber verklebt werden.\\
 
-Wichtig ist, dass nicht an beiden Seiten der Flüssigkristall aufgetragen wird, sondern nur an Einer.
-Die Abstandhalter in eine Richtung ausrichten, sodass kein Foliensterifen senkrecht zu einer anderen steht. Dadurch wird ein gutes einziehen des Flüsigkristalls gewährleistet. Querliegende Folienabschnitte verhindern einen zügigen und vollständigen Einzug.
-Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit enstehen Flecken an diesen Stellen (siehe Bild j).
+Wichtig ist, dass nicht an beiden Seiten der Flüssigkristall aufgetragen wird, sondern nur an einer.
+Die Abstandhalter in eine Richtung ausrichten, sodass kein Folienstreifen senkrecht zu einer anderen steht. Dadurch wird ein gutes einziehen des Flüssigkristalls gewährleistet. Querliegende Folienabschnitte verhindern einen zügigen und vollständigen Einzug.
+Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit entstehen Flecken an diesen Stellen (Vergleiche Abbildung \ref{Spannung_anlegen}).
 
 \subsection{Anzeigefähigkeit}
 Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) können ebenso ohne Probleme angezeigt werden.
@@ -224,14 +224,17 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
     ~
       \subfigure[Verkleben von zwei Seiten des Displays]{
    		\includegraphics[width=0.22\textwidth]{./Bilder/verklebenDerPlatten.jpg}
+   			\label{Verkleben_von_zwei_Seiten_des_Displays}
     }
     ~
       \subfigure[Einführen des Flüssigkristalls und Verkleben der restlichen Seiten]{
    		\includegraphics[width=0.22\textwidth]{./Bilder/liquidCeinfuegen.jpg}
+   		\label{Einfuehren_des_Fluessigkristalls}
     }
     ~
     \subfigure[Anbringen von Polarisationsfolien und Anlegen von Spannung]{
 		\includegraphics[width=0.22\textwidth]{./Bilder/DarthLeuchtet.jpg}
+			\label{Spannung_anlegen}
 	}
     \caption{Produktionsschritte bei LCD-Herstellung}
 \end{figure}
