--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -70,7 +70,7 @@ Abbildung \ref{Fotolackverfahren} zeigt, dass durch das Fotolackverfahren ein un
 %\end{figure}
 
 \subsubsection*{Klebefolie}\label{subsec:klebefolie}
-Muster werden entworfen und mit einem Plotter aus einer selbstklebenden-Folie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt, anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt. Versuche haben bestätigt, dass das Abziehen der Klebefolie die leitende Indium-Zinn Schicht nicht entfernt oder merklich schädigt. Die Vorteile der Folie sind, dass komplexe Strukturen hergestellt werden können und sehr scharfe Kanten entstehen. Allerdings ist das anschließende Abziehen der Folie sehr mühsam.
+Muster werden entworfen und mit einem Plotter aus einer selbstklebenden-Folie ausgeschnitten. Das Muster wird auf einer Übertragungsfolie aufgebracht und auf die leitende Schicht der Glasplatten aufgeklebt (Abbildung \ref{Uebertragen_der_Klebefolie}), anschließend wird die Übertragungsfolie abgezogen. Nun sind alle Stellen, die später leuchten sollen, abgedeckt. Versuche haben bestätigt, dass das Abziehen der Klebefolie die leitende Indium-Zinn Schicht nicht entfernt oder merklich schädigt. Die Vorteile der Folie sind, dass komplexe Strukturen hergestellt werden können und sehr scharfe Kanten entstehen. Allerdings ist das anschließende Abziehen der Folie sehr mühsam (Abbildung \ref{Abziehen_der_Folie}).
 
 
 \subsubsection*{Edding}
@@ -82,11 +82,11 @@ Wegen der oben genannten Gründe greifen wir für die Herstellung unseres Displa
 \subsection{Ätzen der Struktur}
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 
-Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Dies ist daran zu erkennen, dass die brauen Färbung der leitenden Indium-Zinn Schicht vollständig verschwindet. Hierbei stehen zwei Verfahren zur Auswahl.\\
+Um die Elektroden freizulegen muss an allen Stellen, an denen das Display nichts anzeigen soll die leitende Schicht weggeätzt werden. Dies ist daran zu erkennen, dass die brauen Färbung der leitenden Indium-Zinn Schicht vollständig verschwindet (Abbildung \ref{Glasscheibe_nach_Aetzvorgang}). Hierbei stehen zwei Verfahren zur Auswahl.\\
 
 \subsubsection*{Salzsäure}
 
-Die leitende Indium-Zinn-Schicht lässt sich sehr schnell und einfach mit Salzsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht (Fotolack, Klebefolie oder Edding), in Salzsäure gelegt. Bereits nach 15 Sek. ist der Vorgang beendet. Gegebenenfalls können die Platten auch länger im Salzsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
+Die leitende Indium-Zinn-Schicht lässt sich sehr schnell und einfach mit Salzsäure (5\%) entfernen. Hierfür wird die Glasplatte mit der schützenden Schicht (Fotolack, Klebefolie oder Edding), in Salzsäure gelegt (Abbildung \ref{Aetzvorgang}). Bereits nach 15 Sek. ist der Vorgang beendet. Gegebenenfalls können die Platten auch länger im Salzsäurebad verweilen. Dies könnte allerdings dazu führen, dass die Salzsäure unter die Klebefolie zieht und zu viel wegätzt.
 
 \subsubsection*{Platinenätzmittel}
 Das Wegätzen der Indium-Zinn Schicht ist auch durch das Ätzbad (Natriumpersulfatlösung) möglich, welches im FAUFabLab zum Ätzen von Platinen genutzt wird. Nach ca. 20 Minuten war bei unserem Versuch die leitende Indium-Zinn-Schicht entfernt. Diese Methode stellt also eine gute Alternative zur Salzsäure dar.
@@ -152,7 +152,7 @@ Ein funktionierendes, aber sehr zeitaufwändiges Verfahren ist die Oxidierung in
 Bei der maximalen Temperatur des Ofen von 230 Grad werden die Glasplatten mit der beschichteten Seite nach oben auf das Gitter gelegt. Wichtig ist, dass der Ofen nur leicht vorgeheizt wurde, da zu starke Temperaturunterschiede die Glasplatten zum brechen bringen könnten. Nun wurden die Testplatten für 1:30h im Ofen belassen und dort anschließend für 30 min abgekühlt.
 Beide Indikatoren haben angeschlagen was zeigt, dass die Oxidierung erfolgreich war.\\
 
-Da die Oxidierung im Ofen das einzig funktionierende und effiziente Verfahren ist, wird es zur Herstellung der Displays eingesetzt.
+Da die Oxidierung im Ofen das einzig funktionierende und effiziente Verfahren ist, wird es zur Herstellung der Displays eingesetzt (Abbildung \ref{Oxidieren_der_Platten}). 
 
 \subsection{Ausrichtung der Glasplatten}
 
@@ -184,7 +184,7 @@ Die Abstandhalter in eine Richtung ausrichten, sodass kein Folienstreifen senkre
 Außerdem sollte darauf geachtet werden, dass die Folien am Rand angebracht werden. Würde die Folie in die Mitte gelegt kann an diese Stelle kein Flüssigkristall gelangen und somit entstehen Flecken an diesen Stellen (Vergleiche Abbildung \ref{Spannung_anlegen}).
 
 \subsection{Anzeigefähigkeit}
-Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) können ebenso ohne Probleme angezeigt werden.
+Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt diese sicher mit Spannung und sie können somit angezeigt werden. Die kleinste Struktur beim Strukturtest wird ohne Probleme angezeigt (Dicke 0,4mm). Der Grund dafür sind die scharfen Kanten, die durch den Folienplott erreicht werden. Die Ausrichtung ist gut möglich, da die Struktur nach der Oxidierung der Glasplatten noch leicht, aber dennoch gut sichtbar ist. Komplexe Strukturen (Walter White, Darth Vader, Jürgen) (Vergleiche Abbildung \ref{testmuster}) können ebenso ohne Probleme angezeigt werden.
 
 \begin{figure}[]
     \centering
@@ -194,22 +194,27 @@ Selbst die kleinste Zuleitung (Dicke 1mm) bei den kleinen Rechtecken versorgt di
     %~ 
     \subfigure[Übertragen der Klebefolie]{  
         \includegraphics[width=0.22\textwidth]{./Bilder/aufklebenDerFolie.jpg}    
+        \label{Uebertragen_der_Klebefolie}
     }
     ~
      \subfigure[Ätzvorgang]{
    		\includegraphics[width=0.22\textwidth]{./Bilder/aetzen.jpg}
+   			\label{Aetzvorgang}
     }
     ~
      \subfigure[Glasscheibe nach Ätzvorgang]{
    		\includegraphics[width=0.22\textwidth]{./Bilder/Schritt3.jpg}
+   		\label{Glasscheibe_nach_Aetzvorgang}
     }
     ~
     \subfigure[Abziehen der Folie]{	
    		\includegraphics[width=0.22\textwidth]{./Bilder/Schritt2.jpg}
+   		\label{Abziehen_der_Folie}
     }
     ~
     \subfigure[Oxidieren der Glasplatten]{	
    		\includegraphics[width=0.22\textwidth]{./Bilder/backenImOfen.jpg}
+   		\label{Oxidieren_der_Platten}
     }
      ~
     \subfigure[Reinigen der Platten]{	
