--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -1,5 +1,5 @@
 \section{Elektronik}\label{sec:elektronik}
-\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
+%\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.
 \subsection{Ansteuerung}
 In diesem Kapitel werden verschiedene Arten und Möglichkeiten der Ansteuerung des LCD diskutiert.
 
@@ -9,11 +9,11 @@ Das LCD Display sollte mit einer Rechteck-Wechselspannung angesteuert werden. Gl
 \subsubsection{Spannungshöhe}\label{subsec:spannung}
 Es gibt zwei ausschlaggebende Kriterien:
 \begin{itemize}
-\item Minimale Spannung, dass ein gut sichtbares Bild resultiert
-\item Spannung, bei der eine möglichst geringer Strom fließt\\
+\item Minimalste Spannung, so dass noch ein gut sichtbares Bild erscheint
+\item Spannung, bei der ein möglichst geringer Strom fließt\\
 \end{itemize}
 
-Unter einer Rechteck-Wechselspannung von -2\,V - +2\,V wird die Anzeige zu schwach, um klar etwas erkennen zu können. Mit steigender Spannung nimmt nur die Schnelligkeit zu, mit der das Anzeigefeld angezeigt wird, die Intensität nimmt nicht weiter zu. Ab einer Spannung von 6V besteht die Gefahr, dass auch benachbarte Felder aufleuchten. So wurde bei unserem Testdesign \textit{Darth Vader} auf Platte 1 und die \textit{kleinen Rechtecken} auf Platte 2 angeschlossen. Die \textit{kleinen Rechtecken} wurden angezeigt.
+Unter einer Rechteck-Wechselspannung von -2\,V - +2\,V wird die Anzeige zu schwach, um klar etwas erkennen zu können. Mit steigender Spannung nimmt nur die Schnelligkeit zu, mit der das Anzeigefeld angezeigt wird, die Intensität nimmt nicht weiter zu. Ab einer Spannung von 6V besteht die Gefahr, dass auch benachbarte Felder aufleuchten. So wurde bei unserem Testdesign (Abbildung \ref{testmuster}) \textit{Darth Vader} auf Platte 1 und die \textit{kleinen Rechtecken} auf Platte 2 angeschlossen. Die \textit{kleinen Rechtecken} wurden angezeigt.
 
 Die Stromstärken wurden mit einem Multimeter gemessen. Im Ruhezustand hat das Messgerät bereits einen Strom von -2\,$\mu$A 
  angezeigt. Wir bewegen uns im Microampereberreich weshalb die folgenden Messwerte nur als Richtwerte zu verstehen sind. Sie spiegeln aber sehr gut wieder, dass ein LCD sehr energiesparend ist.
