--- a/paper/Kapitel/elektronik.tex
+++ b/paper/Kapitel/elektronik.tex
@@ -38,7 +38,7 @@ Die Stromstärken wurden mit einem Multimeter gemessen. Im Ruhezustand hat das M
 Tabelle \ref{tab:volt} zeigt die Messungen der Stromstärken in Microampere der einzelnen Testanzeigedesigns bei einer angelegten Gleichspannung. Dies ist für einen Dauerbetrieb nicht zu empfehlen (siehe Abschnitt \ref{subsec:spannung}), wurde aber zur Vereinfachung der Messung so gewählt. Weshalb die Anzeige von “Darth Vader” so hohe Stromstärken aufweist ist noch unklar.
 
 \subsubsection{Frequenz}
-Zur Feststellung mit welcher Frequenz das LCD angesteuert werden sollte, haben wir eine Rechteckspannung mit verschiedenen Frequenzen an verschiedene Elektroden angelegt. Unter einer Frequenz von 30\,Hz fängt die Anzeige an zu flackern, da das menschliche Auge dort das Umschalten feststellen kann. Über einer Frequenz von 1\,MHz lässt die Intensität merklich nach. Um den Mikrocontroller möglichst stromsparend benutzen zu können, sollte aber eine möglichst geringe Frequenz verwendet werden.
+Zur Feststellung mit welcher Frequenz das LCD angesteuert werden sollte, haben wir eine Rechteckspannung mit unterschiedlichen Frequenzen an verschiedenen Elektroden angelegt. Unter einer Frequenz von 30\,Hz fängt die Anzeige an zu flackern, da das menschliche Auge dort das Umschalten feststellen kann. Über einer Frequenz von 1\,MHz lässt die Intensität merklich nach. Um den Mikrocontroller stromsparend benutzen zu können, sollte aber eine möglichst geringe Frequenz verwendet werden.
 
 \subsubsection{Ansteuerungsart}
 Da für eine Einzelansteuerung jedes einzelnen Symbols zu viele Mikrocontrollerausgänge benötigt werden, wird auf das Multiplexverfahren zurückgegriffen. Dieses spielt vor allem bei einer Symbolbelegung von \(4\times4\) Symbolen auf einer Glasplatte aus.
@@ -48,7 +48,7 @@ Da für eine Einzelansteuerung jedes einzelnen Symbols zu viele Mikrocontrollera
 
 %Aufgrund der oben genannten Vorteile des Multiplexverfahrens haben wir dieses für die Ausarbeitung unseres Displays genutzt. Seine Vorteile spielt es vor allem bei einer Symbolbelegung von \(4\times4\) Symbolen auf einer Glasplatte aus.\\
 
-Zur Ansteuerung des LCD wird idealerweise eine Rechteckspannung von \(-3\,\textrm{V}\) bis \(3\,\textrm{V}\) bei einer Frequenz von \(50\,\textrm{Hz}\) im Mulitplexverfahren.
+Zur Ansteuerung des LCD wird idealerweise eine Rechteckspannung von \(-3\,\textrm{V}\) bis \(3\,\textrm{V}\) bei einer Frequenz von \(50\,\textrm{Hz}\) im Mulitplexverfahren verwendet.
 
 %Zusammenfassend sind also folgende Ansteuerparameter optimal für die Ansteuerung dieses LCD:
 %\begin{itemize}
