--- a/paper/Kapitel/ausblick.tex
+++ b/paper/Kapitel/ausblick.tex
@@ -21,6 +21,6 @@ Des Weiteren ist denkbar, die Uhr um ein Funkuhrmodul zu erweitern, sodass die U
 
 Eine Möglichkeit wäre es, eine Anzeige für eine selbstgebaute Wetterstation zu designen.
 
-Eine weitere Idee ist es, ein Spiel zu entwerfen und ein angepasstes Display dazu zu erstellen.
+Eine weitere Idee ist es, ein Spiel zu entwerfen und dafür ein angepasstes Display zu erstellen.
 
 %Für ein Eieruhr, um rechtzeitig die Glasplatten, die im Ofen oxidiert werden herauszuholen, kann ein LCD Display verwendet werden.
