--- a/paper/Kapitel/zusammenfassung.tex
+++ b/paper/Kapitel/zusammenfassung.tex
@@ -4,13 +4,13 @@ Folgende Verfahrenschritte zur Herstellung der Flüssigkristallanzeige haben sic
 
 \begin{itemize}
 \item Elektrodenstrukturierung durch Klebefolie
-\item Ätzen der Struktur durch Salzsäure (5%)
+\item Ätzen der Struktur durch Salzsäure (5\%)
 \item Oxidieren der Glasplatten im Ofen
 \item Reinigung der Glasplatten im Reinigungsbad (RBS 35) unter Verwendung von Siedesteinchen
 \item Kontaktierung mittels conductive paint und Zweikomponentenkleber\\
 \end{itemize}
 
-Die Ansteuerung erfolgt mit
+Die Ansteuerung des LCDs erfolgt mit
 einer Rechteckspannung von \(-3\,\textrm{V}\) bis \(3\,\textrm{V}\)
 bei einer Frequenz von \(50\,\textrm{Hz}\) im
 Multiplexverfahren.
