--- a/paper/Kapitel/lcd.tex
+++ b/paper/Kapitel/lcd.tex
@@ -14,8 +14,8 @@ Das Display besteht aus zwei zusammengeklebten Glasplatten mit einem Abstand von
 \begin{itemize}
 \item Zwei Glasplatten, die mit der leitenden Schicht überzogenen Innenseiten liegen sich gegenüber (Markierung 2 und 4)
 \item Zwischen den Glasplatten: Flüssigkristall (Markierung 3)
-\item Außerhalb der Glasplatten: Polarisationsfolienn (Markierung 1 und 5)
-\item Eine Refelektorfolie auf einer Seite (Markierung 6)
+\item Außerhalb der Glasplatten: Polarisationsfolien (Markierung 1 und 5)
+\item Eine Reflektorfolie auf einer Seite (Markierung 6)
 \end{itemize}
 Die Glasplatten werden so präpariert, dass die zigarrenförmige Moleküle auf jeweils einer Glasplatte in eine Richtung zeigen. Auf der gegenüberliegenden Seite sind sie um 90 Grad gedreht. Der Flüssigkristall beschreibt eine “Schraubenstruktur”. Diese verschraubte Struktur veranlasst polarisiertes Licht, ihr zu folgen. Ohne Spannung wird die Polarisationsebene um 90 Grad gedreht und das Licht wird durchgelassen und reflektiert. Beim Anlegen von Spannung (ca. 3V Wechselspannung -> siehe Kapitel \ref{sec:elektronik}) richten sich die Moleküle kollektiv senkrecht zu den Elektroden aus. Somit existiert also für das Polarisationslicht keine Schraubenstruktur mehr. Folglich wird beim Durchgang durch die Zelle der Polarisationszustand nicht beeinflusst, was schließlich dazu führt, dass die Bereiche dunkel erscheinen (Quellen: \cite{Bauanleitung} \cite{aufbau_und_funktion})
 
@@ -142,9 +142,9 @@ Somit lässt sich festhalten, dass eine Oxidierung mittels Wasserstoffperoxid be
 
 Da die Oxidierung bei Raumtemperatur nicht funktioniert hat wurde ein Versuch gestartet, die Indium-Zinn Schicht in erwärmten Wasserstoffperoxid durchzuführen. Auch hier konnte keine Oxidierung festgestellt werden.
 
-\subsubsection{Hitze durch einen Heißluftfön}
+\subsubsection{Hitze durch einen Heißluftföhn}
 
-Ein Test mit einem Heißluftfön, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist keine großflächige Aufbringung der Hitze möglich. Deshalb ist für Plattengröße von 110mm x 100mm das Verfahren unbrauchbar.
+Ein Test mit einem Heißluftföhn, der auf 300 Grad eingestellt wurde ergab, das nach einer Einwirkzeit von 1h die Schicht oxidiert ist. Jedoch ist keine großflächige Aufbringung der Hitze möglich. Deshalb ist für Plattengröße von 110mm x 100mm das Verfahren unbrauchbar.
 
 \subsubsection{Hitze im Ofen}
 
@@ -166,7 +166,7 @@ Die Platten können ohne Probleme anhand der schwachen braunen Restfärbung ausg
 %\textbf{Sicherheitshinweis:} Vorsicht beim Umgang mit den Chemikalien und immer eine Schutzbrille tragen.\\
 
 Im nächsten Schritt müssen die Glasplatten gereinigt werden, da jede Verunreinigung dazu führen kann, dass ungewollte Flecken entstehen.
-Das alkalische Reinigungsbad wird im Verhältnis 1:5 mit Wasser gemischt und anschließend in ein Gefäß gegeben, in das die Glasplatten hineingelegt werden können (siehe Abbildung \ref{Reinigen_der_Platten}). Wenn man die Platten jeweils mit der leitende Seite nach Außen zeigend einlegt, können beide gleichzeitig gereinigt werden. Um einen Siedeverzug zu verhindern ist es notwendig, dass Siedesteinchen eingelegt werden. Nachdem die Glasplatten in das Gefäß gelegt wurden kann die Flüßigkeit mit einem Heizfeld zum kochen gebracht werden. Die Glasplatten für 5 min im kochenden Wasser belassen und dann wieder etwas abkühlen lassen. Die Glasplatten vorsichtig entnehmen, da große Temperaturunterschiede diese zum zerspringen bringen können.
+Das alkalische Reinigungsbad wird im Verhältnis 1:5 mit Wasser gemischt und anschließend in ein Gefäß gegeben, in das die Glasplatten hineingelegt werden können (siehe Abbildung \ref{Reinigen_der_Platten}). Wenn man die Platten jeweils mit der leitende Seite nach Außen zeigend einlegt, können beide gleichzeitig gereinigt werden. Um einen Siedeverzug zu verhindern ist es notwendig, dass Siedesteinchen eingelegt werden. Nachdem die Glasplatten in das Gefäß gelegt wurden kann die Flüssigkeit mit einem Heizfeld zum kochen gebracht werden. Die Glasplatten für 5 min im kochenden Wasser belassen und dann wieder etwas abkühlen lassen. Die Glasplatten vorsichtig entnehmen, da große Temperaturunterschiede diese zum zerspringen bringen können.
 Von nun an sollte darauf geachtet werden, dass die sauberen Platten nicht wieder durch Fussel oder Feuchtigkeit verunreinigt werden.
 
 \subsection{Reiborientierung}
