--- a/paper/Kapitel/projektbeschreibung.tex
+++ b/paper/Kapitel/projektbeschreibung.tex
@@ -1,15 +1,15 @@
 \section{Projektbeschreibung}
 \subsection{Motivation}
-In diesem Projekt wird eine selbstgebaute Dezimal-Binär-Uhr hergestellt die mit Batterien und ohne Netzanbindung betrieben wird. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. Dadurch wird die Uhr besonders energiesparend und es können individuelle Symbole zur Anzeige der Uhrzeit gewählt werden. Angesteuert wird der Display über einen Microcontroller. Zwei Taster dienen zur minutengenau Einstellung der Uhr. Derartige Binäruhren sind nicht käuflich erhätlich und es existieren noch keine Anlneitungen dafür.
+In diesem Projekt wird eine selbstgebaute Dezimal-Binär-Uhr hergestellt die mit Batterien und ohne Netzanbindung betrieben wird. Die Anzeige soll aus einem selbstgebauten Flüssigkristalldisplay (Liquid Crystal Display, LCD) bestehen. Dadurch wird die Uhr besonders energiesparend und es können individuelle Symbole zur Anzeige der Uhrzeit gewählt werden. Angesteuert wird der Display über einen Mikrocontroller. Zwei Taster dienen zur minutengenau Einstellung der Uhr. Derartige Binäruhren sind nicht käuflich erhältlich und es existieren noch keine Anlneitungen dafür.
 
 \subsection{Spezifikationen}
 Die Uhr sollte folgende Eigenschaften aufweisen:
 \begin{itemize}
 \item Anzeige der Uhrzeit in einem Dezimal-Binär-Code (binäre Darstellung der Dezimalstellen)
 \item Betrieb mit herkömmlichen Batterien
-\item Geringer Verbauch und somit langer unabhängiger Betrieb
+\item Geringer Verbrauch und somit langer unabhängiger Betrieb
 \item Individuelles Design
-\item Ansteuerung durch einen Microcontroller
+\item Ansteuerung durch einen Mikrocontroller
 \end{itemize}
 
 \subsection{Produktionsschritte}
