--- a/paper/Kapitel/zusammenfassung.tex
+++ b/paper/Kapitel/zusammenfassung.tex
@@ -1,6 +1,6 @@
 \section{Zusammenfassung}
 
-Folgende Verfahrenschritte zur Herstellung der Flüssigkristallanzeige haben sich als die am besten geeigneten herausgestellt und werden für den weiteren Verlaufe des Projekts eingesetzt:
+Folgende Verfahrensschritte zur Herstellung der Flüssigkristallanzeige haben sich als die am besten geeigneten herausgestellt und werden für den weiteren Verlaufe des Projekts eingesetzt:
 
 \begin{itemize}
 \item Elektrodenstrukturierung durch Klebefolie
